# OpenClaw

./: .gitignore  README.md  SETUP.md  pyproject.toml
openclaw/: __init__.py  config.py  main.py
openclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
openclaw/ai/: __init__.py  assistant.py
openclaw/api/: __init__.py  app.py  portfolio_routes.py  routes.py
openclaw/vps/: __init__.py  manager.py  models.py
petersen-digital/: .env.local.example  next.config.ts  nginx-petersen-digital.conf  package.json  pm2.config.js  tailwind.config.ts
petersen-digital/content/: site.json
petersen-digital/content/projects/: petersen-digital-portfolio.md
petersen-digital/src/app/: globals.css  layout.tsx  page.tsx
petersen-digital/src/app/about/: page.tsx
petersen-digital/src/app/api/chat/: route.ts
petersen-digital/src/app/api/cms/: route.ts
petersen-digital/src/app/contact/: page.tsx
petersen-digital/src/app/playground/: page.tsx
petersen-digital/src/app/projects/: page.tsx
petersen-digital/src/app/projects/[slug]/: page.tsx
petersen-digital/src/components/layout/: Footer.tsx  Nav.tsx
petersen-digital/src/components/portfolio/: ProjectCard.tsx  ServiceCard.tsx
petersen-digital/src/components/ui/: TerminalBlock.tsx
petersen-digital/src/lib/: cms.ts  projects.ts  site.ts  types.ts
tests/: test_api.py  test_vps.py
