[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "0.1.0"
description = "OpenClaw – AI-powered VPS management platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
openclaw = "openclaw.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
